Veldra Webpage Redesign in Accomodation with V1.0.0 pre-release update part 10

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -329,7 +329,7 @@
   "observe.arch.title": "Architecture",
   "observe.arch.gateway": "ReserveGrid OS Gateway",
   "observe.arch.event_stream": "Event stream server",
-  "observe.arch.dashboard": "This dashboard",
+  "observe.arch.dashboard": "Observe Dashboard",
   "observe.arch.desc": "The gateway emits structured events for every share decision. This dashboard subscribes to those events in real time.",
   "observe.tech.title": "Technology",
   "observe.tech.events": "Event-driven architecture",
@@ -700,5 +700,121 @@
   "docs.sec.ops.5": "Use TLS for HTTP endpoints in production",
   "docs.callout.join": "<strong>1:1 join invariant:</strong> Every <code>share_accepted</code> with <code>sv2_response = \"success\"</code> produces exactly one <code>share_forward_result</code>. The adapter blocks on channel capacity rather than dropping results.",
   "docs.callout.critical": "<strong>⚠ Critical:</strong> Do not expose <code>/gateway/events</code> or <code>/metrics</code> to untrusted networks. Set <code>http_api_key</code> in production. Both endpoints require authentication to prevent information leakage.",
-  "legal.updated_date": "Last updated: February 19, 2026"
+  "legal.updated_date": "Last updated: February 19, 2026",
+  "observe.auth.label_email": "Email",
+  "observe.auth.label_password": "Password",
+  "observe.auth.label_name": "Full name",
+  "observe.auth.label_org": "Organization",
+  "observe.auth.placeholder_email": "you@example.com",
+  "observe.auth.placeholder_password": "Your password",
+  "observe.auth.placeholder_name": "Jane Smith",
+  "observe.auth.placeholder_org": "MIT, a16z, Braiins, etc.",
+  "observe.auth.placeholder_password_min": "Minimum 8 characters",
+  "observe.auth.btn_signin": "Sign in",
+  "observe.auth.btn_request": "Request access",
+  "observe.auth.toggle_no_access": "Don't have access?",
+  "observe.auth.toggle_request": "Request access",
+  "observe.auth.toggle_has_access": "Already have access?",
+  "observe.auth.toggle_signin": "Sign in",
+  "observe.dash.api_label": "API Endpoint",
+  "observe.dash.api_placeholder": "http://localhost:8080",
+  "observe.dash.status_connecting": "Connecting...",
+  "observe.dash.signed_in_as": "Signed in as <strong id=\"user-display-name\"></strong> (<span id=\"user-display-org\"></span>)",
+  "observe.dash.btn_signout": "Sign out",
+  "observe.dash.mixed_content_warn": "The API endpoint uses http:// but this page is served over https://. Browsers block mixed content requests. Use an https:// endpoint or access this page over http:// for local testing.",
+  "observe.dash.demo_mode": "DEMO MODE",
+  "observe.dash.demo_desc": "No live backend detected. Showing example data to illustrate the dashboard.",
+  "observe.dash.mempool_tx": "Mempool TX",
+  "observe.dash.mempool_usage": "Usage",
+  "observe.dash.mempool_tier": "Expected Tier",
+  "observe.dash.verdict_count": "0 loaded",
+  "observe.dash.waiting": "Waiting for data...",
+  "observe.dash.export_label": "Export verdict data:",
+  "observe.dash.export_csv": "CSV",
+  "observe.dash.export_ndjson": "NDJSON",
+  "observe.dash.no_rejections": "No rejection data yet",
+  "observe.dash.from_latest": "from latest verdict",
+  "observe.dash.weight_util": "Weight utilization",
+  "observe.dash.sigops_headroom": "Sigops headroom",
+  "observe.dash.template_age": "Template age",
+  "observe.dash.coinbase_sigops": "Coinbase sigops",
+  "observe.dash.no_warnings": "No warnings",
+  "observe.tiers.low": "Low",
+  "observe.tiers.mid": "Mid",
+  "observe.tiers.high": "High",
+  "observe.policy.title": "Active Policy Configuration",
+  "observe.arch.bitcoind": "bitcoind",
+  "observe.arch.bitcoind_desc": "Bitcoin Core node producing block templates via getblocktemplate",
+  "observe.arch.tmgr": "Template Manager",
+  "observe.arch.tmgr_desc": "Packages raw templates into TemplatePropose with metadata",
+  "observe.arch.verifier": "Pool Verifier",
+  "observe.arch.verifier_desc": "Evaluates against policy.toml, emits TemplateVerdict with reason_code",
+  "observe.arch.dashboard_desc": "Read-only analytics, verdict stream, and policy display",
+  "observe.tech.rust": "Rust 2024",
+  "observe.tech.rust_desc": "Memory-safe systems language with zero-cost abstractions. No garbage collector, no runtime overhead, no undefined behavior.",
+  "observe.tech.tokio": "tokio",
+  "observe.tech.tokio_desc": "Async runtime for concurrent TCP and HTTP handling. Non-blocking I/O across all connections with minimal resource usage.",
+  "observe.tech.axum": "Axum",
+  "observe.tech.axum_desc": "Type-safe HTTP framework built on hyper and tower. Compile-time route validation with ergonomic extractors.",
+  "observe.tech.bitcoin": "Bitcoin Protocol",
+  "observe.tech.bitcoin_desc": "Native getblocktemplate integration. NDJSON wire protocol for template proposals and verdicts over TCP.",
+  "observe.catalog.th_code": "reason_code",
+  "observe.catalog.th_category": "Category",
+  "observe.catalog.th_desc": "Description",
+  "observe.catalog.cat_protocol": "Protocol",
+  "observe.catalog.cat_policy": "Policy",
+  "observe.catalog.cat_fee": "Fee",
+  "observe.catalog.cat_system": "System",
+  "observe.catalog.cat_safety": "Safety",
+  "observe.catalog.protocol_version_mismatch": "Template protocol version does not match the version required by policy.",
+  "observe.catalog.invalid_prev_hash": "Previous block hash contains non-hexadecimal characters.",
+  "observe.catalog.prev_hash_len_mismatch": "Previous block hash length does not match required_prevhash_len.",
+  "observe.catalog.coinbase_value_zero_rejected": "Coinbase value is zero and reject_coinbase_zero flag is enabled.",
+  "observe.catalog.empty_template_rejected": "Template has zero transactions and reject_empty_templates flag is enabled.",
+  "observe.catalog.tx_count_exceeded": "Transaction count exceeds max_tx_count policy limit.",
+  "observe.catalog.total_fees_below_minimum": "Total fees in the template fall below min_total_fees threshold.",
+  "observe.catalog.avg_fee_below_minimum": "Average fee per transaction is below the tier-specific minimum threshold.",
+  "observe.catalog.policy_load_error": "Policy configuration could not be loaded (lock poisoned or unavailable).",
+  "observe.catalog.mempool_backend_unavailable": "Mempool data fetch failed; tier selection fell back to configured default.",
+  "observe.catalog.internal_error": "Unexpected handler failure during template evaluation.",
+  "observe.catalog.weight_ratio_exceeded": "Template weight as a fraction of MAX_BLOCK_WEIGHT (4,000,000 WU) exceeds the configured max_weight_ratio threshold.",
+  "observe.catalog.template_stale": "Template age exceeds max_template_age_ms, indicating the template may be based on outdated chain state.",
+  "observe.catalog.sigops_budget_warning": "Total sigops in the template exceed the configured warn_sigops_ratio of MAX_BLOCK_SIGOPS (80,000). Observe-only by default.",
+  "observe.catalog.coinbase_sigops_abnormal": "Coinbase transaction sigops exceed warn_coinbase_sigops_max, which may indicate an unusual or adversarial coinbase. Observe-only by default.",
+  "observe.flow.s1_title": "Template Proposed",
+  "observe.flow.s1_desc": "Bitcoin node produces a block template. Template Manager packages it as a TemplatePropose with block height, fees, and tx count.",
+  "observe.flow.s2_title": "Policy Evaluated",
+  "observe.flow.s2_desc": "Pool Verifier checks the template against policy.toml rules in sequence: protocol version, prev hash, fees, tx limits, tier thresholds, and consensus safety checks (weight ratio, template staleness, sigops budget).",
+  "observe.flow.s3_title": "Verdict Issued",
+  "observe.flow.s3_desc": "A TemplateVerdict is returned with accepted/rejected status, canonical reason_code, human-readable detail, and policy context.",
+  "observe.flow.s4_title": "Logged & Observable",
+  "observe.flow.s4_desc": "Every verdict is written to disk (NDJSON), kept in memory (last 1000), and exposed via HTTP for this dashboard to display.",
+  "docs.tab.core": "Core",
+  "docs.tab.noise": "Noise",
+  "docs.tab.timing": "Timing",
+  "docs.tab.share": "Share",
+  "docs.tab.auth": "Auth",
+  "docs.tab.escape": "Escape Hatches",
+  "docs.hero.label": "Documentation",
+  "docs.search.btn": "Search docs",
+  "docs.filter.auth": "Auth",
+  "docs.filter.channel": "Channel",
+  "docs.filter.framing": "Framing",
+  "docs.filter.job": "Job",
+  "docs.filter.share": "Share",
+  "docs.filter.system": "System",
+  "docs.filter.transport": "Transport",
+  "docs.section.config_sub": "51 TOML configuration keys across six categories. All values can be overridden by environment variables.",
+  "docs.section.config_title": "Configuration Reference",
+  "docs.section.events_sub": "Two-event lifecycle: share_accepted on receipt, share_forward_result on upstream response.",
+  "docs.section.events_title": "Share Event Reference",
+  "docs.section.rc_sub": "34 machine-readable codes for every gateway decision. Filter by category below.",
+  "docs.section.rc_title": "Gateway Reason Codes",
+  "docs.section.security_sub": "Design invariants and operational constraints.",
+  "docs.section.security_title": "Security Boundaries",
+  "docs.section.verdict_sub": "15 verdicts emitted by the template verifier. Used in template_verdict events and gateway disconnects.",
+  "docs.section.verdict_title": "Verdict Reason Codes",
+  "docs.th.code": "Code",
+  "docs.th.description": "Description",
+  "product.hero.btn_demo": "Launch demo"
 }
