--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -3,7 +3,7 @@
   "nav.product": "Producto",
   "nav.docs": "Documentación",
   "nav.about": "Acerca de",
-  "nav.observe": "Observe",
+  "nav.observe": "Observar",
   "nav.menu": "Menú",
   "btn.explore": "Explorar ReserveGrid OS",
   "btn.docs": "Leer la documentación",
@@ -316,8 +316,8 @@
   "docs.events.share_forward_result.share_id": "ID único del share, coincide con share_accepted",
   "docs.events.share_forward_result.upstream_status": "Estado de aceptación del pool",
   "docs.events.share_forward_result.reason_code": "Razón si se rechazó",
-  "observe.hero.title": "Dashboard de monitoreo <span class=\"accent\">del gateway</span>",
-  "observe.hero.sub": "Events de share en vivo, métricas del gateway, análisis de reason codes y estado de política. Información en tiempo real sobre rendimiento y salud de tu despliegue SV2.",
+  "observe.hero.title": "Panel de control de <span class=\"accent\">monitoreo</span> de gateway",
+  "observe.hero.sub": "Eventos de share en directo, métricas de gateway, análisis de códigos de razón y estado de políticas. Información en tiempo real sobre el rendimiento y la salud de tu implementación SV2.",
   "observe.auth.title": "Autenticación del gateway",
   "observe.auth.label_address": "Dirección del gateway",
   "observe.auth.label_port": "Puerto del gateway",
@@ -329,7 +329,7 @@
   "observe.arch.title": "Arquitectura",
   "observe.arch.gateway": "Gateway ReserveGrid OS",
   "observe.arch.event_stream": "Servidor de event stream",
-  "observe.arch.dashboard": "Este dashboard",
+  "observe.arch.dashboard": "Panel de Control Observe",
   "observe.arch.desc": "El gateway emite eventos estructurados para cada decisión de share. Este dashboard se suscribe a esos eventos en tiempo real.",
   "observe.tech.title": "Tecnología",
   "observe.tech.events": "Arquitectura impulsada por eventos",
@@ -464,30 +464,30 @@
   "legal.translation_banner": "Esta página ha sido traducida automáticamente. La versión en inglés es el documento legalmente vinculante.",
   "legal.toc_title": "En esta página",
   "observe.hero.label": "Modo Observe",
-  "observe.auth.login_title": "Acceder al Modo Observe",
-  "observe.auth.login_sub": "Accede a veredictos de plantillas en vivo y análisis de rechazos.",
+  "observe.auth.login_title": "Inicia sesión en Observe Mode",
+  "observe.auth.login_sub": "Accede a veredictos de templates en directo y análisis de rechazos.",
   "observe.auth.register_title": "Solicitar acceso a Observe",
-  "observe.auth.register_sub": "Envía tus datos para revisión del administrador. Recibirás un email cuando sea aprobado.",
-  "observe.dash.recent_verdicts": "Veredictos recientes",
-  "observe.dash.rejection_reasons": "Razones de rechazo",
-  "observe.dash.consensus_safety": "Seguridad de consenso",
-  "observe.dash.total_verdicts": "Total de veredictos",
+  "observe.auth.register_sub": "Envía tu información para revisión del administrador. Recibirás un correo cuando sea aprobado.",
+  "observe.dash.recent_verdicts": "Veredictos Recientes",
+  "observe.dash.rejection_reasons": "Razones de Rechazo",
+  "observe.dash.consensus_safety": "Seguridad de Consenso",
+  "observe.dash.total_verdicts": "Veredictos Totales",
   "observe.dash.accepted": "Aceptados",
   "observe.dash.rejected": "Rechazados",
-  "observe.dash.accept_rate": "Tasa de aceptación",
-  "observe.tiers.eyebrow": "Niveles de comisión",
-  "observe.tiers.title": "Distribución de niveles basada en el mempool",
-  "observe.tiers.sub": "Las plantillas se evalúan contra umbrales de comisión dinámicos basados en condiciones actuales del mempool.",
+  "observe.dash.accept_rate": "Tasa de Aceptación",
+  "observe.tiers.eyebrow": "Tiers de Comisión",
+  "observe.tiers.title": "Distribución de tier de comisión impulsada por mempool",
+  "observe.tiers.sub": "Los templates se evalúan contra umbrales de comisión dinámicos basados en condiciones actuales de mempool.",
   "observe.arch.eyebrow": "Arquitectura",
-  "observe.arch.sys_title": "Descripción del sistema",
-  "observe.arch.sys_sub": "ReserveGrid OS se sitúa entre el nodo de Bitcoin y el pool, verificando cada plantilla de bloque contra la política definida por el operador.",
-  "observe.tech.eyebrow": "Stack tecnológico",
-  "observe.tech.stack_title": "Construido para corrección y rendimiento",
+  "observe.arch.sys_title": "Descripción general del sistema",
+  "observe.arch.sys_sub": "ReserveGrid OS se sitúa entre el nodo Bitcoin y el pool, verificando cada template de bloque contra la política definida por el operador.",
+  "observe.tech.eyebrow": "Stack Tecnológico",
+  "observe.tech.stack_title": "Construido para la corrección y el rendimiento",
   "observe.catalog.eyebrow": "Referencia",
-  "observe.catalog.title": "Catálogo de reason codes de veredicto",
-  "observe.catalog.sub": "Cada rechazo lleva un reason_code canónico y legible por máquinas. Estos códigos son estables en protocolo, verificador, exportaciones y documentación.",
+  "observe.catalog.title": "Catálogo de códigos de razón de veredicto",
+  "observe.catalog.sub": "Cada rechazo conlleva un reason_code canónico y legible por máquina. Estos códigos son estables entre el protocolo, verificador, exportaciones y documentación.",
   "observe.flow.eyebrow": "Cómo funciona",
-  "observe.flow.title": "Flujo de verificación de plantillas",
+  "observe.flow.title": "Flujo de verificación de template",
   "docs.th.category": "Categoría",
   "docs.th.field": "Campo",
   "docs.th.type": "Tipo",
@@ -700,5 +700,121 @@
   "docs.sec.ops.5": "Usar TLS para puntos finales HTTP en producción",
   "docs.callout.join": "<strong>Invariante de unión 1:1:</strong> Cada <code>share_accepted</code> con <code>sv2_response = \"success\"</code> produce exactamente un <code>share_forward_result</code>. El adaptador se bloquea en la capacidad del canal en lugar de descartar resultados.",
   "docs.callout.critical": "<strong>⚠ Crítico:</strong> No exponga <code>/gateway/events</code> o <code>/metrics</code> a redes no confiables. Establezca <code>http_api_key</code> en producción. Ambos puntos finales requieren autenticación para evitar fuga de información.",
-  "legal.updated_date": "Última actualización: 19 de febrero de 2026"
+  "legal.updated_date": "Última actualización: 19 de febrero de 2026",
+  "observe.auth.label_email": "Correo electrónico",
+  "observe.auth.label_password": "Contraseña",
+  "observe.auth.label_name": "Nombre completo",
+  "observe.auth.label_org": "Organización",
+  "observe.auth.placeholder_email": "you@example.com",
+  "observe.auth.placeholder_password": "Tu contraseña",
+  "observe.auth.placeholder_name": "Jane Smith",
+  "observe.auth.placeholder_org": "MIT, a16z, Braiins, etc.",
+  "observe.auth.placeholder_password_min": "Mínimo 8 caracteres",
+  "observe.auth.btn_signin": "Iniciar sesión",
+  "observe.auth.btn_request": "Solicitar acceso",
+  "observe.auth.toggle_no_access": "¿No tienes acceso?",
+  "observe.auth.toggle_request": "Solicitar acceso",
+  "observe.auth.toggle_has_access": "¿Ya tienes acceso?",
+  "observe.auth.toggle_signin": "Iniciar sesión",
+  "observe.dash.api_label": "Punto final de API",
+  "observe.dash.api_placeholder": "http://localhost:8080",
+  "observe.dash.status_connecting": "Conectando...",
+  "observe.dash.signed_in_as": "Sesión iniciada como <strong id=\"user-display-name\"></strong> (<span id=\"user-display-org\"></span>)",
+  "observe.dash.btn_signout": "Cerrar sesión",
+  "observe.dash.mixed_content_warn": "El punto final de API utiliza http:// pero esta página se sirve sobre https://. Los navegadores bloquean solicitudes de contenido mixto. Usa un punto final https:// o accede a esta página sobre http:// para pruebas locales.",
+  "observe.dash.demo_mode": "MODO DEMO",
+  "observe.dash.demo_desc": "No se detectó backend en directo. Se muestran datos de ejemplo para ilustrar el panel de control.",
+  "observe.dash.mempool_tx": "TX Mempool",
+  "observe.dash.mempool_usage": "Uso",
+  "observe.dash.mempool_tier": "Tier Esperado",
+  "observe.dash.verdict_count": "0 cargados",
+  "observe.dash.waiting": "Esperando datos...",
+  "observe.dash.export_label": "Exportar datos de veredictos:",
+  "observe.dash.export_csv": "CSV",
+  "observe.dash.export_ndjson": "NDJSON",
+  "observe.dash.no_rejections": "Sin datos de rechazo aún",
+  "observe.dash.from_latest": "desde veredicto más reciente",
+  "observe.dash.weight_util": "Utilización de peso",
+  "observe.dash.sigops_headroom": "Margen de sigops",
+  "observe.dash.template_age": "Antigüedad del template",
+  "observe.dash.coinbase_sigops": "Sigops de coinbase",
+  "observe.dash.no_warnings": "Sin advertencias",
+  "observe.tiers.low": "Bajo",
+  "observe.tiers.mid": "Medio",
+  "observe.tiers.high": "Alto",
+  "observe.policy.title": "Configuración de Política Activa",
+  "observe.arch.bitcoind": "bitcoind",
+  "observe.arch.bitcoind_desc": "Nodo Bitcoin Core que produce templates de bloque vía getblocktemplate",
+  "observe.arch.tmgr": "Template Manager",
+  "observe.arch.tmgr_desc": "Empaqueta templates sin procesar en TemplatePropose con metadata",
+  "observe.arch.verifier": "Pool Verifier",
+  "observe.arch.verifier_desc": "Evalúa contra policy.toml, emite TemplateVerdict con reason_code",
+  "observe.arch.dashboard_desc": "Análisis de solo lectura, flujo de veredictos y visualización de política",
+  "observe.tech.rust": "Rust 2024",
+  "observe.tech.rust_desc": "Lenguaje de sistemas seguro en memoria con abstracciones sin costo. Sin recolector de basura, sin sobrecarga de runtime, sin comportamiento indefinido.",
+  "observe.tech.tokio": "tokio",
+  "observe.tech.tokio_desc": "Runtime asincrónico para manejo concurrente de TCP y HTTP. I/O sin bloqueo en todas las conexiones con uso mínimo de recursos.",
+  "observe.tech.axum": "Axum",
+  "observe.tech.axum_desc": "Framework HTTP type-safe construido sobre hyper y tower. Validación de rutas en tiempo de compilación con extractores ergonómicos.",
+  "observe.tech.bitcoin": "Bitcoin Protocol",
+  "observe.tech.bitcoin_desc": "Integración nativa de getblocktemplate. Protocolo de cable NDJSON para propuestas de templates y veredictos sobre TCP.",
+  "observe.catalog.th_code": "reason_code",
+  "observe.catalog.th_category": "Categoría",
+  "observe.catalog.th_desc": "Descripción",
+  "observe.catalog.cat_protocol": "Protocolo",
+  "observe.catalog.cat_policy": "Política",
+  "observe.catalog.cat_fee": "Comisión",
+  "observe.catalog.cat_system": "Sistema",
+  "observe.catalog.cat_safety": "Seguridad",
+  "observe.catalog.protocol_version_mismatch": "La versión del protocolo de template no coincide con la versión requerida por la política.",
+  "observe.catalog.invalid_prev_hash": "El hash de bloque anterior contiene caracteres no hexadecimales.",
+  "observe.catalog.prev_hash_len_mismatch": "La longitud del hash de bloque anterior no coincide con required_prevhash_len.",
+  "observe.catalog.coinbase_value_zero_rejected": "El valor de coinbase es cero y la bandera reject_coinbase_zero está habilitada.",
+  "observe.catalog.empty_template_rejected": "El template tiene cero transacciones y la bandera reject_empty_templates está habilitada.",
+  "observe.catalog.tx_count_exceeded": "El número de transacciones excede el límite de política max_tx_count.",
+  "observe.catalog.total_fees_below_minimum": "Las comisiones totales en el template caen por debajo del umbral min_total_fees.",
+  "observe.catalog.avg_fee_below_minimum": "La comisión promedio por transacción está por debajo del umbral específico del tier.",
+  "observe.catalog.policy_load_error": "No se pudo cargar la configuración de política (bloqueo envenenado o no disponible).",
+  "observe.catalog.mempool_backend_unavailable": "La obtención de datos de mempool falló; la selección de tier se retrasó al default configurado.",
+  "observe.catalog.internal_error": "Fallo inesperado del manejador durante la evaluación del template.",
+  "observe.catalog.weight_ratio_exceeded": "El peso del template como fracción de MAX_BLOCK_WEIGHT (4,000,000 WU) excede el umbral max_weight_ratio configurado.",
+  "observe.catalog.template_stale": "La antigüedad del template excede max_template_age_ms, indicando que el template puede basarse en un estado de cadena obsoleto.",
+  "observe.catalog.sigops_budget_warning": "Los sigops totales en el template exceden el warn_sigops_ratio configurado de MAX_BLOCK_SIGOPS (80,000). Solo observe por defecto.",
+  "observe.catalog.coinbase_sigops_abnormal": "Los sigops de transacción coinbase exceden warn_coinbase_sigops_max, lo que puede indicar un coinbase inusual o adversarial. Solo observe por defecto.",
+  "observe.flow.s1_title": "Template Propuesto",
+  "observe.flow.s1_desc": "El nodo Bitcoin produce un template de bloque. Template Manager lo empaqueta como TemplatePropose con altura de bloque, comisiones y recuento de tx.",
+  "observe.flow.s2_title": "Política Evaluada",
+  "observe.flow.s2_desc": "Pool Verifier verifica el template contra las reglas de policy.toml en secuencia: versión de protocolo, hash anterior, comisiones, límites de tx, umbrales de tier y verificaciones de seguridad de consenso (ratio de peso, antigüedad de template, presupuesto de sigops).",
+  "observe.flow.s3_title": "Veredicto Emitido",
+  "observe.flow.s3_desc": "Se devuelve un TemplateVerdict con estado aceptado/rechazado, reason_code canónico, detalle legible por humanos y contexto de política.",
+  "observe.flow.s4_title": "Registrado y Observable",
+  "observe.flow.s4_desc": "Cada veredicto se escribe en disco (NDJSON), se mantiene en memoria (últimos 1000) y se expone vía HTTP para que este panel de control lo muestre.",
+  "docs.tab.core": "Núcleo",
+  "docs.tab.noise": "Noise",
+  "docs.tab.timing": "Temporización",
+  "docs.tab.share": "Share",
+  "docs.tab.auth": "Autenticación",
+  "docs.tab.escape": "Escape Hatches",
+  "docs.hero.label": "Documentación",
+  "docs.search.btn": "Buscar docs",
+  "docs.filter.auth": "Autenticación",
+  "docs.filter.channel": "Canal",
+  "docs.filter.framing": "Encuadre",
+  "docs.filter.job": "Trabajo",
+  "docs.filter.share": "Share",
+  "docs.filter.system": "Sistema",
+  "docs.filter.transport": "Transporte",
+  "docs.section.config_sub": "51 claves de configuración TOML en seis categorías. Todos los valores pueden ser sobrescritos por variables de entorno.",
+  "docs.section.config_title": "Referencia de Configuración",
+  "docs.section.events_sub": "Ciclo de vida de dos eventos: share_accepted al recibir, share_forward_result en la respuesta upstream.",
+  "docs.section.events_title": "Referencia de Eventos Share",
+  "docs.section.rc_sub": "34 códigos legibles por máquina para cada decisión del gateway. Filtra por categoría abajo.",
+  "docs.section.rc_title": "Gateway Reason Codes",
+  "docs.section.security_sub": "Invariantes de diseño y restricciones operativas.",
+  "docs.section.security_title": "Límites de Seguridad",
+  "docs.section.verdict_sub": "15 veredictos emitidos por el verificador de templates. Usados en eventos template_verdict y desconexiones del gateway.",
+  "docs.section.verdict_title": "Verdict Reason Codes",
+  "docs.th.code": "Código",
+  "docs.th.description": "Descripción",
+  "product.hero.btn_demo": "Lanzar demo"
 }
