--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -3,7 +3,7 @@
   "nav.product": "产品",
   "nav.docs": "文档",
   "nav.about": "关于",
-  "nav.observe": "Observe",
+  "nav.observe": "观测",
   "nav.menu": "菜单",
   "btn.explore": "探索 ReserveGrid OS",
   "btn.docs": "阅读文档",
@@ -316,13 +316,13 @@
   "docs.events.share_forward_result.share_id": "与 share_accepted 匹配的唯一 share 标识符",
   "docs.events.share_forward_result.upstream_status": "矿池接受状态",
   "docs.events.share_forward_result.reason_code": "拒绝 reason code",
-  "observe.hero.label": "观察模式",
-  "observe.hero.title": "网关监控<span class=\"accent\">仪表板</span>",
-  "observe.hero.sub": "实时 share 事件、网关指标、reason code 分析和策略状态。对您 SV2 部署的性能和健康状况进行实时洞察。",
-  "observe.auth.login_title": "登录观察模式",
-  "observe.auth.login_sub": "访问实时模板裁定和拒绝分析。",
-  "observe.auth.register_title": "申请观察模式访问权限",
-  "observe.auth.register_sub": "提交您的信息以供管理员审核。审核通过后您将收到电子邮件通知。",
+  "observe.hero.label": "Observe 模式",
+  "observe.hero.title": "Gateway 监控<span class=\"accent\">仪表板</span>",
+  "observe.hero.sub": "实时分享事件、gateway 指标、reason code 分析和策略状态。实时了解您的 SV2 部署性能和运行状况。",
+  "observe.auth.login_title": "登录 Observe 模式",
+  "observe.auth.login_sub": "访问实时 template verdicts 和拒绝分析。",
+  "observe.auth.register_title": "申请 Observe 访问权限",
+  "observe.auth.register_sub": "提交您的信息供管理员审核。批准后，您将收到一封电子邮件。",
   "observe.auth.title": "网关身份验证",
   "observe.auth.label_address": "网关地址",
   "observe.auth.label_port": "网关端口",
@@ -331,21 +331,21 @@
   "observe.auth.status_connecting": "正在连接...",
   "observe.auth.status_connected": "已连接",
   "observe.auth.status_error": "连接失败",
-  "observe.dash.recent_verdicts": "近期裁定",
+  "observe.dash.recent_verdicts": "最近的 Verdicts",
   "observe.dash.rejection_reasons": "拒绝原因",
   "observe.dash.consensus_safety": "共识安全",
-  "observe.dash.total_verdicts": "总裁定数",
+  "observe.dash.total_verdicts": "总 Verdicts",
   "observe.dash.accepted": "已接受",
   "observe.dash.rejected": "已拒绝",
   "observe.dash.accept_rate": "接受率",
   "observe.arch.title": "架构",
   "observe.arch.gateway": "ReserveGrid OS 网关",
   "observe.arch.event_stream": "事件流服务器",
-  "observe.arch.dashboard": "此仪表板",
+  "observe.arch.dashboard": "Observe 仪表板",
   "observe.arch.desc": "网关为每个 share 决定发出结构化事件。此仪表板实时订阅这些事件。",
   "observe.arch.eyebrow": "架构",
   "observe.arch.sys_title": "系统概览",
-  "observe.arch.sys_sub": "ReserveGrid OS 位于比特币节点和矿池之间，根据运营方定义的策略验证每个区块模板。",
+  "observe.arch.sys_sub": "ReserveGrid OS 位于 Bitcoin 节点和 pool 之间，根据运营商定义的策略验证每个 block template。",
   "observe.tech.title": "技术",
   "observe.tech.events": "事件驱动架构",
   "observe.tech.events_desc": "每个 share 生成带 reason code 和策略上下文的机器可读事件。",
@@ -360,14 +360,14 @@
   "observe.verdicts.rejected": "已拒绝",
   "observe.verdicts.pending": "待处理",
   "observe.verdicts.forwarded": "转发上游",
-  "observe.tiers.eyebrow": "费率层级",
-  "observe.tiers.title": "基于内存池的费率层级分布",
-  "observe.tiers.sub": "模板将根据当前内存池条件的动态费率阈值进行评估。",
+  "observe.tiers.eyebrow": "费用 Tier",
+  "observe.tiers.title": "由 mempool 驱动的费用 tier 分布",
+  "observe.tiers.sub": "Template 根据当前 mempool 条件的动态费用阈值进行评估。",
   "observe.catalog.eyebrow": "参考",
-  "observe.catalog.title": "裁定 reason code 目录",
-  "observe.catalog.sub": "每次拒绝都携带一个规范的、机器可读的 reason_code。这些代码在协议、验证器、导出和文档中保持稳定。",
-  "observe.flow.eyebrow": "工作原理",
-  "observe.flow.title": "模板验证流程",
+  "observe.catalog.title": "Verdict Reason Code 目录",
+  "observe.catalog.sub": "每个拒绝都带有规范的、机器可读的 reason_code。这些代码在协议、verifier、导出和文档中保持稳定。",
+  "observe.flow.eyebrow": "工作方式",
+  "observe.flow.title": "Template 验证流程",
   "legal.privacy.title": "隐私政策",
   "legal.privacy.s1.title": "1. 我们是谁",
   "legal.privacy.s1.body": "Veldra, Inc.（\"Veldra\"、\"我们\"、\"我们的\"）运营 veldra.org 网站和 ReserveGrid OS 软件套件。本政策描述了当您与我们的服务互动时，我们如何收集、使用和保护您的信息。",
@@ -700,5 +700,121 @@
   "docs.sec.ops.5": "在生产中对 HTTP 端点使用 TLS",
   "docs.callout.join": "<strong>1:1 join 不变性：</strong>每个具有 <code>sv2_response = \"success\"</code> 的 <code>share_accepted</code> 都会产生恰好一个 <code>share_forward_result</code>。Adapter 在通道容量上阻塞而不是丢弃结果。",
   "docs.callout.critical": "<strong>⚠ 关键：</strong>不要将 <code>/gateway/events</code> 或 <code>/metrics</code> 暴露给不受信任的网络。在生产环境中设置 <code>http_api_key</code>。两个端点都需要认证以防止信息泄露。",
-  "legal.updated_date": "最后更新：2026年2月19日"
+  "legal.updated_date": "最后更新：2026年2月19日",
+  "observe.auth.label_email": "电子邮件",
+  "observe.auth.label_password": "密码",
+  "observe.auth.label_name": "全名",
+  "observe.auth.label_org": "组织",
+  "observe.auth.placeholder_email": "you@example.com",
+  "observe.auth.placeholder_password": "您的密码",
+  "observe.auth.placeholder_name": "Jane Smith",
+  "observe.auth.placeholder_org": "MIT, a16z, Braiins, etc.",
+  "observe.auth.placeholder_password_min": "最少 8 个字符",
+  "observe.auth.btn_signin": "登录",
+  "observe.auth.btn_request": "申请访问权限",
+  "observe.auth.toggle_no_access": "没有访问权限？",
+  "observe.auth.toggle_request": "申请访问权限",
+  "observe.auth.toggle_has_access": "已有访问权限？",
+  "observe.auth.toggle_signin": "登录",
+  "observe.dash.api_label": "API 端点",
+  "observe.dash.api_placeholder": "http://localhost:8080",
+  "observe.dash.status_connecting": "正在连接...",
+  "observe.dash.signed_in_as": "登录身份为 <strong id=\"user-display-name\"></strong> (<span id=\"user-display-org\"></span>)",
+  "observe.dash.btn_signout": "登出",
+  "observe.dash.mixed_content_warn": "API 端点使用 http://，但此页面通过 https:// 提供。浏览器会阻止混合内容请求。使用 https:// 端点或通过 http:// 访问此页面进行本地测试。",
+  "observe.dash.demo_mode": "演示模式",
+  "observe.dash.demo_desc": "未检测到实时后端。显示示例数据以说明仪表板。",
+  "observe.dash.mempool_tx": "Mempool TX",
+  "observe.dash.mempool_usage": "使用情况",
+  "observe.dash.mempool_tier": "预期 Tier",
+  "observe.dash.verdict_count": "0 已加载",
+  "observe.dash.waiting": "等待数据...",
+  "observe.dash.export_label": "导出 verdict 数据：",
+  "observe.dash.export_csv": "CSV",
+  "observe.dash.export_ndjson": "NDJSON",
+  "observe.dash.no_rejections": "尚无拒绝数据",
+  "observe.dash.from_latest": "来自最新 verdict",
+  "observe.dash.weight_util": "权重利用率",
+  "observe.dash.sigops_headroom": "Sigops 余量",
+  "observe.dash.template_age": "Template 年龄",
+  "observe.dash.coinbase_sigops": "Coinbase Sigops",
+  "observe.dash.no_warnings": "无警告",
+  "observe.tiers.low": "低",
+  "observe.tiers.mid": "中",
+  "observe.tiers.high": "高",
+  "observe.policy.title": "活跃策略配置",
+  "observe.arch.bitcoind": "bitcoind",
+  "observe.arch.bitcoind_desc": "通过 getblocktemplate 生成 block template 的 Bitcoin Core 节点",
+  "observe.arch.tmgr": "Template Manager",
+  "observe.arch.tmgr_desc": "将原始 template 打包为带有元数据的 TemplatePropose",
+  "observe.arch.verifier": "Pool Verifier",
+  "observe.arch.verifier_desc": "根据 policy.toml 进行评估，发出带 reason_code 的 TemplateVerdict",
+  "observe.arch.dashboard_desc": "只读分析、verdict 流和策略显示",
+  "observe.tech.rust": "Rust 2024",
+  "observe.tech.rust_desc": "具有零成本抽象的内存安全系统语言。无垃圾收集器、无运行时开销、无未定义行为。",
+  "observe.tech.tokio": "tokio",
+  "observe.tech.tokio_desc": "用于并发 TCP 和 HTTP 处理的异步运行时。所有连接上的非阻塞 I/O，资源使用最少。",
+  "observe.tech.axum": "Axum",
+  "observe.tech.axum_desc": "建立在 hyper 和 tower 之上的类型安全 HTTP 框架。编译时路由验证和符合人体工程学的提取器。",
+  "observe.tech.bitcoin": "Bitcoin Protocol",
+  "observe.tech.bitcoin_desc": "getblocktemplate 的原生集成。用于 template 提议和 verdict 的 NDJSON 线路协议，通过 TCP。",
+  "observe.catalog.th_code": "reason_code",
+  "observe.catalog.th_category": "类别",
+  "observe.catalog.th_desc": "描述",
+  "observe.catalog.cat_protocol": "协议",
+  "observe.catalog.cat_policy": "策略",
+  "observe.catalog.cat_fee": "费用",
+  "observe.catalog.cat_system": "系统",
+  "observe.catalog.cat_safety": "安全",
+  "observe.catalog.protocol_version_mismatch": "Template 协议版本与策略要求的版本不匹配。",
+  "observe.catalog.invalid_prev_hash": "前一个块哈希包含非十六进制字符。",
+  "observe.catalog.prev_hash_len_mismatch": "前一个块哈希长度与 required_prevhash_len 不匹配。",
+  "observe.catalog.coinbase_value_zero_rejected": "Coinbase 值为零且启用了 reject_coinbase_zero 标志。",
+  "observe.catalog.empty_template_rejected": "Template 包含零个交易且启用了 reject_empty_templates 标志。",
+  "observe.catalog.tx_count_exceeded": "交易计数超过 max_tx_count 策略限制。",
+  "observe.catalog.total_fees_below_minimum": "Template 中的总费用低于 min_total_fees 阈值。",
+  "observe.catalog.avg_fee_below_minimum": "平均每笔交易费用低于特定 tier 的最低阈值。",
+  "observe.catalog.policy_load_error": "无法加载策略配置（锁被污染或不可用）。",
+  "observe.catalog.mempool_backend_unavailable": "Mempool 数据获取失败；tier 选择退回到配置的默认值。",
+  "observe.catalog.internal_error": "Template 评估期间发生意外处理程序故障。",
+  "observe.catalog.weight_ratio_exceeded": "Template 权重作为 MAX_BLOCK_WEIGHT (4,000,000 WU) 的分数超过配置的 max_weight_ratio 阈值。",
+  "observe.catalog.template_stale": "Template 年龄超过 max_template_age_ms，表示 template 可能基于过时的链状态。",
+  "observe.catalog.sigops_budget_warning": "Template 中的总 sigops 超过了 MAX_BLOCK_SIGOPS (80,000) 的配置 warn_sigops_ratio。默认为仅观察。",
+  "observe.catalog.coinbase_sigops_abnormal": "Coinbase 交易 sigops 超过 warn_coinbase_sigops_max，可能表示异常或恶意 coinbase。默认为仅观察。",
+  "observe.flow.s1_title": "Template 提议",
+  "observe.flow.s1_desc": "Bitcoin 节点生成 block template。Template Manager 将其打包为包含块高度、费用和交易计数的 TemplatePropose。",
+  "observe.flow.s2_title": "策略评估",
+  "observe.flow.s2_desc": "Pool Verifier 按顺序对 template 进行 policy.toml 规则检查：协议版本、前一个哈希、费用、交易限制、tier 阈值和共识安全检查（权重比例、template 过期、sigops 预算）。",
+  "observe.flow.s3_title": "Verdict 发布",
+  "observe.flow.s3_desc": "返回 TemplateVerdict，包含接受/拒绝状态、规范 reason_code、人类可读的详细信息和策略上下文。",
+  "observe.flow.s4_title": "已记录和可观察",
+  "observe.flow.s4_desc": "每个 verdict 都被写入磁盘 (NDJSON)，保留在内存中 (最后 1000 个)，并通过 HTTP 公开供此仪表板显示。",
+  "docs.tab.core": "核心",
+  "docs.tab.noise": "Noise",
+  "docs.tab.timing": "时序",
+  "docs.tab.share": "Share",
+  "docs.tab.auth": "认证",
+  "docs.tab.escape": "安全开关",
+  "docs.hero.label": "文档",
+  "docs.search.btn": "搜索文档",
+  "docs.filter.auth": "认证",
+  "docs.filter.channel": "通道",
+  "docs.filter.framing": "帧协议",
+  "docs.filter.job": "作业",
+  "docs.filter.share": "Share",
+  "docs.filter.system": "系统",
+  "docs.filter.transport": "传输层",
+  "docs.section.config_sub": "六个类别共51个 TOML 配置键。所有值均可通过环境变量覆盖。",
+  "docs.section.config_title": "配置参考",
+  "docs.section.events_sub": "双事件生命周期：收到 share 时生成 share_accepted，upstream 响应后生成 share_forward_result。",
+  "docs.section.events_title": "Share 事件参考",
+  "docs.section.rc_sub": "34个机器可读的 reason code，覆盖 gateway 的每一个决策。按下方类别筛选。",
+  "docs.section.rc_title": "Gateway Reason Codes",
+  "docs.section.security_sub": "设计不变量与运营约束。",
+  "docs.section.security_title": "安全边界",
+  "docs.section.verdict_sub": "模板验证器产生的15个裁定。用于 template_verdict 事件和 gateway 断开连接。",
+  "docs.section.verdict_title": "Verdict Reason Codes",
+  "docs.th.code": "代码",
+  "docs.th.description": "描述",
+  "product.hero.btn_demo": "启动演示"
 }
